--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,8 @@ body{
     font-weight: 400;
     font-size: 15px;
     color: #5385c1;
-    margin: 0px;
+    margin-left: 30px;
+    margin-top: 10px;
 }
 .full-wrapper .footer{
     max-width: 1000px;
@@ -202,10 +203,11 @@ body{
 }
 .full-wrapper .footer .fa{
     float: right;
-    margin-left: 30px;
+    margin-right:30px;
     color: #5385c1;
     font-size: 20px;
     font-weight: 200;
+    margin-top: 10px;
 }
 
 @media only screen and (max-width:1000px){
